--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
         <div class="container hero__container">
             <div class="hero__content">
                 <h1 class="hero__title">Turning Data Into Intelligent Solutions</h1>
-                <h2 class="hero__subtitle">AI/ML Engineer | Computer Vision Specialist</h2>
-                <p class="hero__description">Building the future of agriculture and healthcare through artificial intelligence</p>
+                <h2 class="hero__subtitle">AI/ML Engineer | Data Scientist | MLOps Specialist</h2>
+                <p class="hero__description">Leveraging expertise in AI, machine learning, data engineering, and MLOps to deliver end-to-end intelligent solutions.</p>
                 <div class="hero__buttons">
                     <a href="#projects" class="btn btn--primary">View My Work</a>
                     <a href="#contact" class="btn btn--outline">Contact Me</a>
@@ -74,7 +74,7 @@
           <p>I’m an AI/ML engineer passionate about building intelligent products that create real-world impact. I’ve delivered computer-vision solutions for agriculture, healthcare, and retail.</p>
           <ul class="about__list">
             <li>5+ years experience delivering end-to-end AI products</li>
-            <li>MSc Artificial Intelligence, University of Strathclyde</li>
+            <li>MSc Artificial Intelligence, University of Stirling</li>
             <li>AWS Certified Solutions Architect – Associate</li>
           </ul>
           <a href="assets/MSalami.pdf" class="btn btn--primary" target="_blank">Download CV</a>
@@ -89,29 +89,114 @@
       <h2 class="section__title">Technical Skills</h2>
       <div class="skills__grid">
         <div class="skill-category">
-          <h3>Languages &amp; Libraries</h3>
+          <h3>Programming Languages</h3>
           <ul class="skills-list">
-            <li class="skill-item"><i class="fab fa-python" aria-hidden="true"></i>Python</li>
-            <li class="skill-item"><i class="fab fa-js" aria-hidden="true"></i>JavaScript</li>
-            <li class="skill-item"><i class="fab fa-html5" aria-hidden="true"></i>HTML5</li>
-            <li class="skill-item"><i class="fab fa-css3-alt" aria-hidden="true"></i>CSS3</li>
+            <li class="skill-item"><img src="assets/icons/python.svg" alt="Python" width="20" height="20">Python</li>
+            <li class="skill-item"><i class="fab fa-java" aria-hidden="true"></i>Java</li>
+            <li class="skill-item"><i class="fas fa-code" aria-hidden="true"></i>C++</li>
+            <li class="skill-item"><i class="fab fa-r-project" aria-hidden="true"></i>R</li>
           </ul>
         </div>
         <div class="skill-category">
-          <h3>AI &amp; ML</h3>
+          <h3>Mathematics &amp; Statistics</h3>
           <ul class="skills-list">
-            <li class="skill-item"><img src="assets/icons/pytorch.svg" alt="" width="20" height="20">PyTorch</li>
-            <li class="skill-item"><img src="assets/icons/tensorflow.svg" alt="" width="20" height="20">TensorFlow</li>
-            <li class="skill-item"><i class="fas fa-brain" aria-hidden="true"></i>Computer Vision</li>
-            <li class="skill-item"><i class="fas fa-language" aria-hidden="true"></i>NLP</li>
+            <li class="skill-item">Linear Algebra</li>
+            <li class="skill-item">Calculus</li>
+            <li class="skill-item">Probability &amp; Statistics</li>
+            <li class="skill-item">Optimization Techniques</li>
           </ul>
         </div>
         <div class="skill-category">
-          <h3>Cloud &amp; DevOps</h3>
+          <h3>Machine Learning &amp; Deep Learning</h3>
           <ul class="skills-list">
-            <li class="skill-item"><i class="fab fa-aws" aria-hidden="true"></i>AWS</li>
-            <li class="skill-item"><i class="fab fa-docker" aria-hidden="true"></i>Docker</li>
-            <li class="skill-item"><i class="fab fa-github" aria-hidden="true"></i>GitHub&nbsp;Actions</li>
+            <li class="skill-item">Supervised &amp; Unsupervised Learning</li>
+            <li class="skill-item">Neural Networks (CNN, RNN, LSTM, Transformers)</li>
+            <li class="skill-item">Reinforcement Learning</li>
+            <li class="skill-item">Transfer Learning</li>
+            <li class="skill-item">Model Evaluation &amp; Hyperparameter Tuning</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Frameworks &amp; Libraries</h3>
+          <ul class="skills-list">
+            <li class="skill-item"><img src="assets/icons/tensorflow.svg" width="20" height="20">TensorFlow</li>
+            <li class="skill-item"><img src="assets/icons/pytorch.svg" width="20" height="20">PyTorch</li>
+            <li class="skill-item">Scikit-learn</li>
+            <li class="skill-item">Keras</li>
+            <li class="skill-item">OpenCV</li>
+            <li class="skill-item">Hugging Face Transformers</li>
+            <li class="skill-item">XGBoost</li>
+            <li class="skill-item">LightGBM</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Data Skills</h3>
+          <ul class="skills-list">
+            <li class="skill-item">Data Cleaning &amp; Normalization</li>
+            <li class="skill-item">Feature Engineering</li>
+            <li class="skill-item">Handling Missing Data</li>
+            <li class="skill-item"><i class="fas fa-table" aria-hidden="true"></i>Pandas</li>
+            <li class="skill-item"><i class="fas fa-calculator" aria-hidden="true"></i>NumPy</li>
+            <li class="skill-item"><i class="fas fa-database" aria-hidden="true"></i>SQL</li>
+            <li class="skill-item"><i class="fas fa-chart-line" aria-hidden="true"></i>Matplotlib</li>
+            <li class="skill-item">Seaborn</li>
+            <li class="skill-item"><i class="fas fa-chart-area" aria-hidden="true"></i>Plotly</li>
+            <li class="skill-item"><i class="fas fa-stream" aria-hidden="true"></i>Streamlit</li>
+            <li class="skill-item"><i class="fas fa-chart-bar" aria-hidden="true"></i>Power BI</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Natural Language Processing</h3>
+          <ul class="skills-list">
+            <li class="skill-item">Text Classification &amp; Sentiment Analysis</li>
+            <li class="skill-item">Named Entity Recognition</li>
+            <li class="skill-item">Language Models (BERT, GPT)</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Computer Vision</h3>
+          <ul class="skills-list">
+            <li class="skill-item">Image Classification</li>
+            <li class="skill-item">Image Segmentation</li>
+            <li class="skill-item">Object Detection</li>
+            <li class="skill-item">YOLO &amp; FastAI</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>MLOps</h3>
+          <ul class="skills-list">
+            <li class="skill-item">Model Deployment (Flask, FastAPI, Docker)</li>
+            <li class="skill-item">CI/CD for ML Workflows</li>
+            <li class="skill-item">Versioning with DVC &amp; MLflow</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Software Engineering &amp; Tools</h3>
+          <ul class="skills-list">
+            <li class="skill-item">Git &amp; GitHub</li>
+            <li class="skill-item">Docker &amp; Kubernetes</li>
+            <li class="skill-item">REST APIs</li>
+            <li class="skill-item">Linux &amp; Bash</li>
+            <li class="skill-item">Jupyter Notebooks</li>
+            <li class="skill-item">VSCode &amp; PyCharm</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Cloud &amp; Deployment</h3>
+          <ul class="skills-list">
+            <li class="skill-item">AWS (SageMaker, Lambda, EC2)</li>
+            <li class="skill-item">Google Cloud AI &amp; Vertex AI</li>
+            <li class="skill-item">Azure Machine Learning</li>
+            <li class="skill-item">Streamlit &amp; Gradio</li>
+          </ul>
+        </div>
+        <div class="skill-category">
+          <h3>Soft Skills</h3>
+          <ul class="skills-list">
+            <li class="skill-item">Problem-Solving &amp; Analytical Thinking</li>
+            <li class="skill-item">Communication of Technical Results</li>
+            <li class="skill-item">Collaboration in Interdisciplinary Teams</li>
+            <li class="skill-item">Critical Thinking &amp; Continuous Learning</li>
           </ul>
         </div>
       </div>
@@ -125,6 +210,23 @@
       <div class="projects__grid">
         <!-- Project cards -->
         <div class="project-card">
+           <div class="project-card__content">
+             <h3 class="project-card__title">LeafDoctor</h3>
+             <div class="project-card__tags">
+               <span class="tag">Computer Vision</span>
+               <span class="tag">Plant Health AI</span>
+               <span class="tag">Agriculture</span>
+             </div>
+             <p class="project-card__description">
+               LeafDoctor uses cutting-edge artificial intelligence to identify plant diseases instantly, provide tailored treatment recommendations, and help you maintain thriving plants and crops.
+             </p>
+             <div class="project-card__links">
+               <a href="https://leafdoctor.org/" class="btn btn--primary" target="_blank">View Live Demo</a>
+               <a href="https://github.com/olamiketech/Leaf-doctor" class="btn btn--outline" target="_blank">GitHub Repo</a>
+             </div>
+           </div>
+         </div>
+        <div class="project-card">
           <div class="project-card__content">
             <h3 class="project-card__title">AgroPredict AI</h3>
             <div class="project-card__tags">
@@ -133,8 +235,15 @@
               <span class="tag">Sustainable Ag</span>
             </div>
             <p class="project-card__description">
-              AI-powered recommendations increasing crop yields by 30% on average
+              AgroPredict AI uses real-time weather, soil, and satellite data to provide smallholder farmers with precise advice on when to plant, fertilize, irrigate, and harvest — in their own language and on any device.
             </p>
+            <ul class="project-card__features">
+              <li>📍 Location-based crop advisory (customized to latitude & local weather)</li>
+              <li>🌤️ Weather + soil + satellite data integration (OpenWeatherMap, NASA POWER, SoilGrids)</li>
+              <li>🧪 AI-generated, crop-specific farming advice (OpenAI GPT)</li>
+              <li>🎧 Voice guidance in local languages</li>
+              <li>🗓️ Crop calendar + yield forecast</li>
+            </ul>
             <div class="project-card__links">
               <a href="https://agropredictai.com" class="btn btn--primary" target="_blank">View Live Demo</a>
               <a href="https://github.com/olamiketech/farming-advice-app" class="btn btn--outline" target="_blank">GitHub Repo</a>
