--- a/index.html
+++ b/index.html
@@ -252,6 +252,27 @@
         </div>
         <div class="project-card">
           <div class="project-card__content">
+            <h3 class="project-card__title">ResumeMatch AI</h3>
+            <div class="project-card__tags">
+              <span class="tag">NLP</span>
+              <span class="tag">Streamlit</span>
+              <span class="tag">Python</span>
+            </div>
+            <p class="project-card__description">
+              An AI-powered tool built with Streamlit and Python that compares resumes to job descriptions, scores compatibility, and offers actionable improvement tips using NLP and GPT-4.
+            </p>
+            <div class="project-card__links">
+              <a href="https://resumematchai-production.up.railway.app/" class="btn btn--primary" target="_blank">
+                <i class="fas fa-external-link-alt" aria-hidden="true"></i> Live Demo
+              </a>
+              <a href="https://github.com/olamiketech/ResumeMatchAI" class="btn btn--outline" target="_blank">
+                <i class="fab fa-github" aria-hidden="true"></i> GitHub
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="project-card">
+          <div class="project-card__content">
             <h3 class="project-card__title">ElectroGadget AI Chatbot</h3>
             <div class="project-card__tags">
               <span class="tag">NLP</span>
